--- a/.getignore
+++ b/.getignore
@@ -1,17 +1,7 @@
 # Unity3D .gitignore file.
 #	 Store this file at the root of your local repository.
 .DS_Store
-Library/AssetImportState
-Library/AssetServerCacheV3
-Library/FailedAssetImports.txt
-Library/ScriptAssemblies
-Library/ScriptMapper
-Library/assetDatabase3
-Library/cache
-Library/expandedItems
-Library/metadata
-Library/previews
-Library/guidmapper
+Library
 Temp
 *.csproj
 *.pidb
